--- a/app/src/main/res/layout/activity_expenses.xml
+++ b/app/src/main/res/layout/activity_expenses.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_expenses"
     android:layout_width="match_parent"
@@ -10,4 +11,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.myaquariumapp.Expenses">
 
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:id="@+id/floatingActionButton"
+        app:backgroundTint="@android:color/white"
+        android:onClick="OpenAddExpense"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
