--- a/app/src/main/res/layout/activity_expenses.xml
+++ b/app/src/main/res/layout/activity_expenses.xml
@@ -26,7 +26,7 @@
         android:layout_alignParentEnd="true" />
 
     <ListView
-        android:id="@+id/mobile_list"
+        android:id="@+id/expense_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
