--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,12 +54,13 @@
         android:textSize="12sp"
         android:onClick="OpenExpenses"/>
 
-    <ExpandableListView
+    <ListView
+        android:id="@+id/task_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="13dp" />
+        android:layout_marginTop="26dp" />
 
 </RelativeLayout>
