--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.myaquariumapp.AddExpense">
 
-    <RadioButton
+
+    <!-- <RadioButton
         android:text="RadioButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,19 +29,7 @@
         android:layout_below="@+id/radioButton"
         android:layout_alignLeft="@+id/radioButton"
         android:layout_alignStart="@+id/radioButton"
-        android:id="@+id/radioButton2" />
-
-    <TextView
-        android:text="Category:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:textSize="24sp"
-        android:layout_above="@+id/radioButton2"
-        android:layout_toLeftOf="@+id/radioButton"
-        android:layout_toStartOf="@+id/radioButton"
-        android:layout_marginRight="19dp"
-        android:layout_marginEnd="19dp" />
+        android:id="@+id/radioButton2" /> -->
 
     <TextView
         android:text="Name:"
@@ -49,16 +38,14 @@
         android:layout_marginTop="51dp"
         android:id="@+id/textView2"
         android:textSize="24sp"
-        android:layout_below="@+id/radioButton2"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView" />
+         />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/expenseName"
         android:layout_alignBottom="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
         android:layout_toEndOf="@+id/textView2"
@@ -76,22 +63,66 @@
         android:id="@+id/textView3"
         android:textSize="24sp" />
 
+    <Button
+        android:text="Submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <RadioGroup
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="28dp">
+
+        <TextView
+            android:text="Category:"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            android:textSize="24sp"
+
+            android:layout_marginRight="19dp"
+            android:layout_marginEnd="19dp" />
+
+        <RadioButton
+            android:text="Equipment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="94dp"
+            android:layout_marginEnd="94dp"
+            android:id="@+id/radioButton" />
+
+        <RadioButton
+            android:text="Livestock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/radioButton"
+            android:layout_alignLeft="@+id/radioButton"
+            android:layout_alignStart="@+id/radioButton"
+            android:id="@+id/radioButton2" />
+    </RadioGroup>
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/expenseCost"
         android:layout_alignBottom="@+id/textView3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_toRightOf="@+id/textView3"
+        android:layout_toEndOf="@+id/textView3"
+        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp" />
 
-    <Button
-        android:text="Submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/radioButton2"
-        android:layout_toEndOf="@+id/radioButton2"
-        android:id="@+id/button" />
+
 </RelativeLayout>
