created two java classes to handle the database, attempting to add to it but running into an error.

--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -79,7 +79,8 @@
         android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="28dp">
+        android:layout_marginTop="28dp"
+        android:id="@+id/RadioGroup">
 
         <TextView
             android:text="Category:"
