--- a/app/src/main/res/layout/activity_expenses.xml
+++ b/app/src/main/res/layout/activity_expenses.xml
@@ -26,11 +26,60 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="63dp" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_delete"
+        android:id="@+id/floatingActionButton2"
+        app:backgroundTint="@android:color/white"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/floatingActionButton"
+        android:onClick="OpenDeleteExpense"
+        android:layout_marginTop="63dp" />
+
+    <TextView
+        android:layout_width="90dp"
+        android:layout_height="30dp"
+        android:id="@+id/expense_name_header"
+        android:layout_alignParentLeft="true"
+        android:text="Name"
+        android:gravity="center"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textStyle="normal|bold"
+        android:textAllCaps="true" />
+    <TextView
+        android:layout_width="90dp"
+        android:layout_height="30dp"
+        android:id="@+id/expense_cost_header"
+        android:layout_toRightOf="@+id/expense_name_header"
+        android:text="($)Cost"
+        android:gravity="left"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textStyle="normal|bold"
+        android:textAllCaps="true" />
+    <TextView
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:id="@+id/expense_category_header"
+        android:layout_toRightOf="@+id/expense_cost_header"
+        android:text="Category"
+        android:gravity="center"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textStyle="normal|bold"
+        android:textAllCaps="true" />
+
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/display_expenses"
-        >
+        android:layout_below="@id/expense_cost_header"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:headerDividersEnabled="false">
     </ListView>
 
 </RelativeLayout>
