--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -82,7 +82,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="28dp"
-        android:id="@+id/RadioGroup">
+        android:id="@+id/RadioGroup"
+        android:checkedButton="@+id/radioButton2">
 
         <TextView
             android:text="Category:"
