--- a/app/src/main/res/layout/activity_tank_timeline.xml
+++ b/app/src/main/res/layout/activity_tank_timeline.xml
@@ -24,4 +24,21 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <ListView
+        android:id="@+id/timeline_list"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="26dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        app:srcCompat="@drawable/aquarium"
+        android:id="@+id/imageView2"
+        android:layout_height="250dp"
+        android:layout_below="@+id/timeline_list"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
 </RelativeLayout>
